build_output.txt
Starting build process...
Compiling index.jsx -> index.js...
Compiling 404.jsx -> 404.js...
SyntaxError: C:\Users\mitan\Videos\MITANSHU\404.jsx: Unexpected token (1:0)

> 1 | <!DOCTYPE html>
    | ^
  2 | <html lang="en">
  3 | <head>
  4 |     <meta charset="UTF-8">
    at constructor (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:365:19)
    at JSXParserMixin.raise (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:6599:19)
    at JSXParserMixin.unexpected (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:6619:16)
    at JSXParserMixin.parseExprAtom (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:11400:22)
    at JSXParserMixin.parseExprAtom (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:4764:20)
    at JSXParserMixin.parseExprSubscripts (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:11081:23)
    at JSXParserMixin.parseUpdate (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:11066:21)
    at JSXParserMixin.parseMaybeUnary (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:11046:23)
    at JSXParserMixin.parseMaybeUnaryOrPrivate (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:10899:61)
    at JSXParserMixin.parseExprOps (C:\Users\mitan\Videos\MITANSHU\node_modules\@babel\parser\lib\index.js:10904:23) {
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'UnexpectedToken',
  loc: Position { line: 1, column: 0, index: 0 },
  pos: 0,
  syntaxPlugin: undefined
}
Build failed: Command failed: npx babel 404.jsx --out-file 404.js --presets=@babel/preset-env,@babel/preset-react
